# JARVIS

./: .env.example  .gitignore  README.md  knowledge_pools.json.example  main.py  mcp_servers.example.json  name_corrections.example.json  persona_dials.example.json  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  claude_client.py  config.py  context_builder.py  history.py  hud.py  icon.py  logging_setup.py  memory.py  name_corrector.py  overlay.py  persona.py  proactive.py  recorder.py  screen.py  screenshot.py  tool_registry.py  transcriber.py  tray.py  tts.py  usage.py  usage_report.py  vault_cli.py  vault_entities.py  vault_index.py  vault_organize.py  vault_people.py  vault_taxonomy.py  vault_templates.py  wakeword.py
assets/: .gitkeep
context/: .gitkeep  dnd_notes.example.md  persona.example.md  profile.example.md
docs/: ROADMAP.md
integrations/: __init__.py  _http.py  calendar_sources.py  gmail.py  google_api.py  google_calendar.py  google_docs.py  mcp_auth.py  meal_prep.py  monarch_money.py  monarch_oauth.py  notes_watcher.py  obsidian.py  outlook_calendar.py  outlook_ics.py  spotify.py  spotify_oauth.py  todoist.py  weather.py
logs/: .gitkeep
notes/: .gitkeep
tests/: test_calendar_sources.py  test_categories.py  test_claude_helpers.py  test_claude_mcp.py  test_claude_retry.py  test_claude_vision.py  test_config.py  test_context_builder.py  test_history.py  test_http.py  test_hud.py  test_mcp_auth.py  test_memory.py  test_name_corrector.py  test_obsidian.py  test_overlay.py  test_persona.py  test_proactive.py  test_todoist.py  (+13 more)
(+7 files in other folders)
